--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
     <head>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script type="text/javascript" src="main.js"></script>
+        <link type="text/css" href="main.css"></link>
     </head>
 
     <body>
+
+        <div id="colorId="> hi </div>
         <input id="color-picker" type="color" />
 
     </body>
