--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
     <head>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <link type="text/css" href="main.css"></link>
+        <link type="text/css" rel="stylesheet"  href="main.css">
     </head>
 
     <body>
 
-        <div id="colorId="> hi </div>
+        <div id="colorId"> hi </div>
         <input id="color-picker" type="color" />
 
     </body>
