--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <link type="text/css" rel="stylesheet"  href="main.css">
+        <script src="main.js" type="text/javascript" ></script>
     </head>
 
     <body>
