--- a/index.html
+++ b/index.html
@@ -4,15 +4,11 @@
         <link type="text/css" rel="stylesheet"  href="main.css">
         <script src="main.js" type="text/javascript" ></script>
     </head>
-
     <body>
-
-        <div id="colorId"> hi </div>
+        <div class="box" id="targetId"></div>
+        <div class="box"></div>
+        <div class="box" id="mainId"></div>
+        <div id="colorId"></div>
         <input id="color-picker" type="color" />
-
     </body>
-
-    
-
-
 </html>
