Fixed, now have two squares, almost done.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <div class="box" id="targetId"></div>
         <div class="box"></div>
-        <div class="box" id="mainId"></div>
+        <div class="box" id="userBox"></div>
         <div id="colorId"></div>
         <input id="color-picker" type="color" />
     </body>
