Super simple color value.

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
         <script src="main.js" type="text/javascript" ></script>
     </head>
     <body>
-        <div class="box" id="targetId"></div>
-        <div class="box"></div>
         <div class="box" id="userBox"></div>
+        <div class="box"></div>
+        <div class="box" id="targetId"></div>
         <div id="colorId"></div>
         <input id="color-picker" type="color" />
+
+        <div id="results"> Results </div>
     </body>
 </html>
