--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <div id="colorId"></div>
         <input id="color-picker" type="color" />
 
+        <input id="slider1" type="range" min="100" max="500" step="10" />
+
         <div id="results"> Results </div>
     </body>
 </html>
