--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
         <div id="colorId"></div>
         <input id="color-picker" type="color" />
 
-        <input id="slider1" type="range" min="100" max="500" step="10" />
+        <input id="slider1" type="range" min="0" max="256" step="10" />
 
+        <div id="slideValue"></div>
         <div id="results"> Results </div>
     </body>
 </html>
