Button and fixed step.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
         <div id="colorId"></div>
         <input id="color-picker" type="color" />
 
-        <input id="slider1" type="range" min="0" max="256" step="10" />
+        <input id="slider1" type="range" min="0" max="256" step="1" />
 
-        <div id="slideValue"></div>
         <div id="results"> Results </div>
+        <button id="submitValue"> Submit </button>
+        <div id="slideValue"></div>
     </body>
 </html>
