--- a/many.html
+++ b/many.html
@@ -3,6 +3,10 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="many.js" type="text/javascript" ></script>
         <style>
+            iframe{
+                width: 100%;
+                min-height: 300px;
+            }
 
         </style>
     </head>
