--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html>
     <head>
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+        <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <link type="text/css" rel="stylesheet"  href="main.css">
         <script src="main.js" type="text/javascript" ></script>
+
+
     </head>
     <body>
         <div class="box" id="userBox"></div>
@@ -12,8 +16,8 @@
 
         <input id="slider1" type="range" min="0" max="256" step="1" />
 
-        <div id="results"> Results </div>
-        <button id="submitValue"> Submit </button>
+        <div id="results" class="alert"></div>
+        <button class="btn id="submitValue"> Submit </button>
         <div id="slideValue"></div>
     </body>
 </html>
