Better styles.. odd still wrong.

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
         <input id="slider1" type="range" min="0" max="256" step="1" />
 
-        <div id="results" class="alert"></div>
-        <button class="btn id="submitValue"> Submit </button>
+        <button class="btn btn-danger" id="submitValue"> Submit </button>
         <div id="slideValue"></div>
+        <div id="results" class="alert"></div>
     </body>
 </html>
