dange and role added.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 
         <button class="btn btn-danger" id="submitValue"> Submit </button>
         <div id="slideValue"></div>
-        <div id="results" class="alert"></div>
+        <div id="results" class="alert" role="alert"></div>
     </body>
 </html>
